# cssr4africa

./: .gitignore  README.md
cssr4africa/cssr_system/: CMakeLists.txt  package.xml
cssr4africa/cssr_system/Sound/: run.py
cssr4africa/cssr_system/animateBehaviour/config/: animateBehaviourConfiguration.ini
cssr4africa/cssr_system/animateBehaviour/data/: trajectory_data.csv
cssr4africa/cssr_system/animateBehaviour/src/: animateBehaviourApplication.cpp  animateBehaviourImplementation.cpp  play.cpp
cssr4africa/cssr_system/audio_enhancer/: CMakeLists.txt  package.xml
cssr4africa/cssr_system/audio_enhancer/launch/: denoiser.launch
cssr4africa/cssr_system/audio_enhancer/script/: audio_enhancer_node.py  enhance_onnx.py
cssr4africa/cssr_system/behaviorController/: CMakeLists.txt
cssr4africa/cssr_system/behaviorController/config/: behaviorControllerConfiguration.ini
cssr4africa/cssr_system/behaviorController/data/: lab_tour.xml
cssr4africa/cssr_system/behaviorController/src/: behaviorControllerApplication.cpp  behaviorControllerImplementation.cpp
cssr4africa/cssr_system/faceCNN/: CMakeLists.txt  package.xml
cssr4africa/cssr_system/faceCNN/src/: faceCNN.py
cssr4africa/cssr_system/faceDetection/: CMakeLists.txt  package.xml
cssr4africa/cssr_system/faceDetection/config/: faceDetectionConfiguration.ini
cssr4africa/cssr_system/faceDetection/launch/: debug.launch  driverStub.launch  robot.launch  simulator.launch
cssr4africa/cssr_system/faceDetection/msg/: faceDetectionData.msg
cssr4africa/cssr_system/faceDetection/src/: faceDetectionApplication.cpp  faceDetectionDriver.cpp  faceDetectionImplementation.cpp  faceDetectionStub.cpp
cssr4africa/cssr_system/face_detection/: CMakeLists.txt  README.md  face_detection_requirements.txt  package.xml
cssr4africa/cssr_system/face_detection/config/: faceDetectionConfiguration.ini  face_detection_configuration.ini  face_detection_configuration.json
cssr4africa/cssr_system/face_detection/data/: faceDetectionInput.txt
cssr4africa/cssr_system/face_detection/launch/: face_detection_launch_robot.launch  face_detection_robot.launch
cssr4africa/cssr_system/face_detection/msg/: FaceDetectionData.msg  faceDetection.msg  face_detection.msg
cssr4africa/cssr_system/face_detection/src/: faceDetectionApplication.py  faceDetectionImplementation.py  face_detection_Implementation.py  face_detection_application.py  face_detection_implementation.py  face_detection_sort_tracking.py  face_detection_tracking.py  facedetection.py
cssr4africa/cssr_system/gazeestimation/: CMakeLists.txt  package.xml
cssr4africa/cssr_system/gazeestimation/src/: gaze_node.py
cssr4africa/cssr_system/gestureExecution/: CMakeLists.txt
cssr4africa/cssr_system/gestureExecution/config/: gestureExecutionConfiguration.ini
cssr4africa/cssr_system/gestureExecution/src/: gestureExecutionApplication.cpp  gestureExecutionImplementation.cpp  pepperKinematicsUtilities.cpp
cssr4africa/cssr_system/overtAttention/config/: overtAttentionConfiguration.ini
cssr4africa/cssr_system/overtAttention/src/: overtAttentionApplication.cpp  overtAttentionImplementation.cpp
cssr4africa/cssr_system/overt_attention/: CMakeLists.txt  package.xml
cssr4africa/cssr_system/overt_attention/config/: overtAttentionConfiguration.ini
cssr4africa/cssr_system/overt_attention/msg/: RobotPose.msg  State.msg
cssr4africa/cssr_system/overt_attention/src/: overtAttentionApplication.cpp  overtAttentionImplementation.cpp
cssr4africa/cssr_system/overt_attention/srv/: set_activation.srv
cssr4africa/cssr_system/person_detection/: CMakeLists.txt  README.md  converter.py  package.xml
cssr4africa/cssr_system/person_detection/config/: person_detection_configuration.ini  person_detection_configuration.json
cssr4africa/cssr_system/person_detection/launch/: person_detection_launch_robot.launch  person_detection_robot.launch
cssr4africa/cssr_system/person_detection/msg/: person_detection.msg
cssr4africa/cssr_system/person_detection/src/: face.py  person_detection_application.py  person_detection_implementation.py  person_detection_tracking.py  utils.py  yolov8.py
cssr4africa/cssr_system/persondetection/: CMakeLists.txt
cssr4africa/cssr_system/persondetection/script/: persondetection.py
cssr4africa/cssr_system/robotLocalization/: CMakeLists.txt  ReadMe.md
cssr4africa/cssr_system/robotLocalization/config/: camera_info.yaml  landmarks.yaml  robotLocalizationConfiguration.ini
cssr4africa/cssr_system/robotLocalization/launch/: robotLocalizationLaunchRobot.launch
cssr4africa/cssr_system/robotLocalization/src/: robotLocalizationApplication.cpp  robotLocalizationImplementation.cpp
cssr4africa/cssr_system/sound/: CMakeLists.txt  package.xml  setup.py
cssr4africa/cssr_system/sound/include/: sound.h  util.h
cssr4africa/cssr_system/sound/launch/: offline_asr.launch
cssr4africa/cssr_system/sound/script/: whisper_node.py
cssr4africa/cssr_system/sound/src/: Correlation.cpp  Sound_detection.cpp  ddr_node.py  silero_vad.py  util.cpp  (+2 more)
cssr4africa/cssr_system/soundDetection/: CMakeLists.txt  package.xml
cssr4africa/cssr_system/sound_detection/: CMakeLists.txt  README.md  package.xml  sound_detection_requirements.txt
cssr4africa/cssr_system/speech_event/: speech_event_requirements.txt
cssr4africa/unit_test/: CMakeLists.txt  package.xml
cssr4africa/unit_test/face_detection_test/: CMakeLists.txt  README.md  package.xml
cssr4africa/unit_test/person_detection_test/: README.md
cssr4africa/unit_test/sound_detection_test/: CMakeLists.txt  README.md  package.xml
cssr4africa/unit_tests/: CMakeLists.txt  README.md  package.xml
cssr4africa/unit_tests/behaviorControllerTest/: CMakeLists.txt  README.md
cssr4africa/unit_tests/face_detection_test/: README.md
cssr4africa/unit_tests/person_detection_test/: README.md
cssr4africa/unit_tests/sound_detection_test/: README.md
cssr4africa/utilities/: CMakeLists.txt  package.xml
cssr4africa/utilities/src/: cultureKnowledgeBaseImplementation.cpp  environmentKnowledgeBaseApplication.cpp  environmentKnowledgeBaseImplementation.cpp
(+143 files in other folders)
