<package format="2">
  <name>unit_tests</name>
  <version>0.0.0</version>
  <description>unit_test</description>

  <maintainer email="yohanneh@andrew.cmu.edu">Yohannes Haile</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>naoqi_driver</build_depend>
  <build_depend>naoqi_dcm_driver</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>pepper_control</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>naoqi_driver</exec_depend>
  <exec_depend>naoqi_dcm_driver</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>angles</exec_depend>
  
  <build_export_depend>roscpp</build_export_depend>

</package>
