<?xml version="1.0"?>
<package format="2">
  <name>utilities</name>
  <version>0.0.1</version>
  <description>Utilities package for CSSR4Africa</description>
  <maintainer email="david@vernon.eu">David Vernon</maintainer>
  <license>BSD</license>
  <url type="website">http://www.cssr4africa.org</url>
  <author email="david@vernon.eu">David Vernon</author>

  <!-- Catkin build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build-time dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>

  <!-- Dependencies you expose to other packages at build time -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>

  <export>
    <!-- other tools can request additional information be placed here -->
  </export>
</package>
